[package]
name = "bluer-miflora-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miflora"
path = "src/main.rs"

[dependencies]
bluer-miflora = { path = "../lib", version = "0.1" }

anyhow = "1.0.93"
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3.31"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
