[package]
name = "bluer-miflora"
description = "Library to communicate with the miflora devices with bluer"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "readme.md"

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
thiserror = { version = "2.0" }
tracing = { version = "0.1" }
